upgrade parent and spring-core versions